testdata/baselines/reference/submodule/conformance/checkJsdocTypeTag4.errors.txt
test.js(7,12): error TS2304: Cannot find name 'B'.


==== t.d.ts (0 errors) ====
    type A<T extends string> = { a: T }
    
==== test.js (1 errors) ====
    /** Also should error for jsdoc typedefs
     * @template {string} U
     * @typedef {{ b: U }} B
     */
    /** @type {A<number>} */
    var a;
    /** @type {B<number>} */
               ~
!!! error TS2304: Cannot find name 'B'.
    var b;
    